# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nest-adapters"
version = "0.1.0"
description = "NANDA protocol adapters for Nanda Town (NEST): real Ed25519 identity (rotating + did:key) and agent-receipt reputation, backed by sm-arp."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "NANDA" }]
keywords = [
    "nanda",
    "nest",
    "agent",
    "protocol",
    "ed25519",
    "identity",
    "key-rotation",
    "did-key",
    "reputation",
    "trust",
    "arp",
    "receipts",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = [
    "nest-core>=0.1.4",
    "cryptography>=43.0.0",
    "sm-arp>=0.2.3,<0.3",
]

[project.optional-dependencies]
# Needed only to RUN the bundled scenarios end-to-end (supplies the other 11
# reference layer plugins). The identity plugin alone needs none of these.
scenarios = ["nest-plugins-reference>=0.1.1"]

[project.urls]
Homepage = "https://github.com/Sharathvc23/nest-adapters"
Repository = "https://github.com/Sharathvc23/nest-adapters"

# Nanda Town discovers plugins via these entry-point groups (nest.plugins.<layer>).
# Adding a (layer, name) here is all it takes for `nest run` to resolve our plugin.
[project.entry-points."nest.plugins.identity"]
ed25519_rotating = "nest_adapters.identity:Ed25519RotatingIdentity"
ed25519_didkey = "nest_adapters.identity_didkey:Ed25519DidKeyIdentity"

[project.entry-points."nest.plugins.trust"]
agent_receipts = "nest_adapters.trust_receipts:AgentReceiptsTrust"

[dependency-groups]
dev = [
    "ruff>=0.15",
    "pyright>=1.1.400",
    "mypy>=1.14",
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "hypothesis>=6.0",
    "pyyaml>=6.0",
    "nest-plugins-reference>=0.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nest_adapters"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# E/F = pycodestyle+pyflakes core, I = import sorting, UP = pyupgrade,
# B = bugbear, SIM = simplify, C4 = comprehensions, RUF = ruff-native.
# Kept identical to sm-arp so the two repos share one lint contract.
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.12"

# Tests legitimately white-box plugin internals (normalization curve, the held
# identity, the parity stake map) and exercise sm-arp's untyped helpers; relax
# the corresponding strict diagnostics for the test tree only. src/ stays strict.
[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownLambdaType = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
